--- a/public/background.html
+++ b/public/background.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <script src="common/constant.js"></script>
+    <script src="common/cache.js"></script>
     <script src="background.js"></script>
 </head>
 </html>
